tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@validation__unknown_function.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/validation/unknown_function.txt
---
error: Unknown function `unknown_func`
 --> tpl:1:3
  |
1 | {{ unknown_func() }}
  |    ^^^^^^^^^^^^^^

error: Unknown function `another_unknown`
 --> tpl:2:3
  |
2 | {{ another_unknown() }}
  |    ^^^^^^^^^^^^^^^^^
